--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -15,6 +15,7 @@
       type        = 'text'
       class       = 'form-control'
       placeholder = 'Comment'
+      name        = 'comment'
       value       = tracking.activity.comment
       disabled    = tracking.activity.active
     }}
