--- a/app/components/sy-modal/template.hbs
+++ b/app/components/sy-modal/template.hbs
@@ -1,6 +1,6 @@
 {{#ember-wormhole to='sy-modals'}}
   {{#sy-modal/overlay visible=visible}}
-    <div class="modal-dialog">
+    <div class="modal-dialog {{if size (concat 'modal-dialog--' size)}}">
       {{yield (hash
         header = (component 'sy-modal/header' close=(action 'close'))
         body   = (component 'sy-modal/body'   close=(action 'close'))
