--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -11,7 +11,7 @@
     {{^}}
       <tr>
         <td colspan="8" class="text-center">
-          <em>No reports yet</em>
+          <em>No entries yet</em>
         </td>
       </tr>
     {{/each}}
