--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -55,7 +55,7 @@
       </table>
       <div class="text-center">
         <br>
-        <button class="btn btn-primary" title="Generate reports for all the listed activities above" {{action 'generateReports'}}>Generate reports</button>
+        <button class="btn btn-primary" title="Generate timesheet from all the activities listed above" {{action 'generateReports'}}>Generate timesheet</button>
       </div>
     {{else}}
       <div class="text-center"><em>No activities yet</em></div>
