--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -29,7 +29,7 @@
           Attendances <span class="badge">{{humanize-duration attendanceSum}}</span>
         {{/link-to}}
         {{#link-to 'index.reports' tagName='button' class='btn'}}
-          Reports <span class="badge">{{humanize-duration reportSum}}</span>
+          Timesheet <span class="badge">{{humanize-duration reportSum}}</span>
         {{/link-to}}
         {{#if absence}}
           <button
@@ -63,7 +63,7 @@
         </li>
         <li>
           {{#link-to 'index.reports'}}
-            Reports <span class="badge">{{humanize-duration reportSum}}</span>
+            Timesheet <span class="badge">{{humanize-duration reportSum}}</span>
           {{/link-to}}
         </li>
         <li class="nav-tab--buttons">
