Move buttons to the top right (for consistency)

--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -1,3 +1,6 @@
+<div class="btn-toolbar btn-toolbar--right form-group">
+  <button class="btn btn-success" title="Generate reports for all the listed activities above" {{action 'generateReports'}}>Generate reports</button>
+</div>
 <div class="activities">
   <div class="activities-edit">{{outlet}}</div>
   <div class="activities-list">
@@ -53,10 +56,6 @@
           {{/each}}
         </tbody>
       </table>
-      <div class="text-center">
-        <br>
-        <button class="btn btn-primary" title="Generate reports for all the listed activities above" {{action 'generateReports'}}>Generate reports</button>
-      </div>
     {{else}}
       <div class="text-center"><em>No activities yet</em></div>
     {{/if}}
