Display holidays just like weekends in calendar

--- a/app/components/weekly-overview-day/styles.scss
+++ b/app/components/weekly-overview-day/styles.scss
@@ -7,7 +7,7 @@
   transition: height 300ms ease;
 }
 
-&.weekend {
+&.weekend, &.holiday {
   .bar {
     background-color: rgb(220, 220, 220);
   }
