--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -15,6 +15,7 @@
             worktime = d.worktime
             workday  = d.workday
             absence  = d.absence
+            holiday  = d.holiday
             on-click = (action (mut date))
           }}
         {{/each}}
