--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,3 +1,6 @@
+<div class="btn-toolbar btn-toolbar--right form-group">
+  <button class="btn btn-success" title="Move all entries to another date" {{action (mut showReschedule) true}}>reschedule</button>
+</div>
 <table class="table table--striped table--reports">
   <tbody>
     {{#each reports as |report|}}
@@ -17,3 +20,26 @@
     {{/each}}
   </tbody>
 </table>
+{{#sy-modal visible=showReschedule size="small" as |modal|}}
+  {{#modal.header}}
+    Reschedule timesheet
+  {{/modal.header}}
+  {{#modal.body}}
+    {{#power-calendar
+      class = 'calendar'
+      center = center
+      selected = rescheduleDate
+      onCenterChange = (action (mut center) value='moment')
+      onSelect       = (action (mut rescheduleDate) value='moment')
+      as |calendar|
+      }}
+      <div class={{if calendar.loading 'loading-mask'}}>
+        {{calendar.nav}}
+        {{calendar.days disabledDates=disabledDates startOfWeek=1}}
+      </div>
+    {{/power-calendar}}
+  {{/modal.body}}
+  {{#modal.footer}}
+    <button class="btn btn-primary" {{action 'reschedule' rescheduleDate}}>save</button>
+  {{/modal.footer}}
+{{/sy-modal}}
