--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -1,5 +1,5 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
-  <button class="btn btn-success" title="Generate timesheet for all the activities listed above" {{action 'generateReports'}}>Generate timesheet</button>
+  <button class="btn btn-success" title="Generate timesheet for all the activities listed above" {{action 'generateReportsCheck'}}>Generate timesheet</button>
 </div>
 <div class="activities">
   <div class="activities-edit">{{outlet}}</div>
