First working implementation of project analysis page

--- a/app/components/sy-datepicker/template.hbs
+++ b/app/components/sy-datepicker/template.hbs
@@ -8,7 +8,8 @@
       readonly
       type="text"
       class="form-control picker"
-      value={{moment-format value 'DD.MM.YYYY'}}
+      value={{moment-format value 'DD.MM.YYYY' allow-empty=true}}
+      placeholder={{placeholder}}
     >
   {{/dd.trigger}}
 
