--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -44,4 +44,9 @@
     transformSelection = transformSelection
     suggestionTemplate = suggestionTemplate
   )
+  model = (hash
+    customer = customer
+    project  = project
+    task     = task
+  )
 )}}
