--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -3,6 +3,7 @@
     {{#sy-sidenav-list}}
       {{sy-sidenav-item 'index' 'clock-o' 'Tracking'}}
       {{sy-sidenav-item 'me' 'user' 'Profile'}}
+      {{sy-sidenav-item 'analysis' 'line-chart' 'Analysis'}}
     {{/sy-sidenav-list}}
 
     {{#sy-sidenav-list ' '}}
