--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -12,7 +12,7 @@
     limit              = limit
     display            = display
     transformSelection = transformSelection
-    suggestionTemplate = suggestionTemplate
+    suggestionTemplate = customerTemplate
   )
   project = (component 'aupac-typeahead'
     name               = 'project'
