--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -1,5 +1,6 @@
 {{aupac-typeahead
   name               = 'user'
+  selection          = selection
   action             = (action 'change')
   class              = 'form-control'
   source             = source
