--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -38,13 +38,13 @@
   }}
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Dur.</th>
-      <th>Customer</th>
-      <th>Project</th>
-      <th>Task</th>
-      <th>User</th>
-      <th>Comment</th>
+      {{#sort-header update=(action (mut sort)) current=sort by='date'}}Date{{/sort-header}}
+      {{#sort-header update=(action (mut sort)) current=sort by='duration'}}Dur.{{/sort-header}}
+      {{#sort-header update=(action (mut sort)) current=sort by='task__project__customer__name'}}Customer{{/sort-header}}
+      {{#sort-header update=(action (mut sort)) current=sort by='task__project__name'}}Project{{/sort-header}}
+      {{#sort-header update=(action (mut sort)) current=sort by='task__name'}}Task{{/sort-header}}
+      {{#sort-header update=(action (mut sort)) current=sort by='user'}}User{{/sort-header}}
+      {{#sort-header update=(action (mut sort)) current=sort by='comment'}}Comment{{/sort-header}}
     </tr>
   </thead>
 {{^}}
