Feature to reschedule reports
This commit includes the possibility to reschedule a report of other users. The function is only available to staff users, which is a flag on the user model.
Furthermore the form filter was moved to its own component, which makes it more handy to use.
add tests

--- a/app/me/template.hbs
+++ b/app/me/template.hbs
@@ -22,6 +22,10 @@
                 <td class="text-right">{{moment-format model.activeEmployment.start 'DD.MM.YYYY'}}</td>
               </tr>
               <tr>
+                <td>Staff member:</td>
+                <td class="text-right"><i class="fa {{if model.isStaff "fa-check" "fa-times"}}" aria-hidden="true"></i></td>
+              </tr>
+              <tr>
                 <td>Percentage:</td>
                 <td class="text-right">{{model.activeEmployment.percentage}}%</td>
               </tr>
