--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -12,7 +12,7 @@
         {{#sort-header update=(action (mut sort)) current=sort by='task__project__customer__name'}}Customer{{/sort-header}}
         {{#sort-header update=(action (mut sort)) current=sort by='task__project__name'}}Project{{/sort-header}}
         {{#sort-header update=(action (mut sort)) current=sort by='task__name'}}Task{{/sort-header}}
-        {{#sort-header update=(action (mut sort)) current=sort by='user'}}User{{/sort-header}}
+        {{#sort-header update=(action (mut sort)) current=sort by='user__username'}}User{{/sort-header}}
         {{#sort-header update=(action (mut sort)) current=sort by='comment'}}Comment{{/sort-header}}
       </tr>
     </thead>
