add clear symbol

--- a/app/components/sy-datepicker/template.hbs
+++ b/app/components/sy-datepicker/template.hbs
@@ -11,6 +11,9 @@
       value={{moment-format value 'DD.MM.YYYY' allow-empty=true}}
       placeholder={{placeholder}}
     >
+    <span class="clear" {{action 'clear'}}>
+      <i class="fa fa-times" aria-hidden="true"></i>
+    </span>
   {{/dd.trigger}}
 
   {{#dd.content renderInPlace=true}}
