Allow editing of the review and billable flags for rescheduling

--- a/app/components/sy-checkbox/template.hbs
+++ b/app/components/sy-checkbox/template.hbs
@@ -1,2 +1,2 @@
-<input type="checkbox" id="{{elementId}}-checkbox" checked={{checked}} disabled={{disabled}} onchange={{action on-change value='target.value'}}>
+{{one-way-checkbox checked disabled=disabled update=(action on-change) elementId=(concat elementId '-checkbox')}}
 <label for="{{elementId}}-checkbox">{{#if hasBlock}}{{~yield~}}{{else}}{{~label~}}{{/if}}</label>
