Warn user properly if an overlapping activity exists

--- a/app/components/sy-timepicker/template.hbs
+++ b/app/components/sy-timepicker/template.hbs
@@ -2,6 +2,7 @@
   type="text"
   class="form-control"
   placeholder="--:--"
+  disabled={{disabled}}
   value={{displayValue}}
   pattern={{pattern}}
   onkeydown={{action 'handleKeyDown'}}
