--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -13,7 +13,7 @@
       <table class="table table--striped table--activity-blocks">
         <tbody>
           {{#each blocks as |block|}}
-            {{#if (and block.to (not block.isDeleted))}}
+            {{#unless block.isDeleted}}
               <tr
                 class="text-center {{if block.overlaps 'danger'}}"
                 title="{{if block.overlaps 'This block overlaps the day of the activity'}}"
@@ -23,15 +23,19 @@
                 <td>
                   <button data-test-delete-activity-block class="btn btn-default" {{action 'deleteBlock' block}}>{{fa-icon 'trash'}}</button>
                 </td>
-                <td>{{sy-timepicker max=block.to precision=1 value=block.from on-change=(action (mut block.from))}}</td>
+                <td>{{sy-timepicker disabled=(not block.to) max=block.to precision=1 value=block.from on-change=(action (mut block.from))}}</td>
                 <td>-</td>
-                <td>{{sy-timepicker min=block.from precision=1 value=block.to on-change=(action (mut block.to))}}</td>
+                <td>{{sy-timepicker disabled=(not block.to) min=block.from precision=1 value=block.to on-change=(action (mut block.to))}}</td>
                 <td>
-                  {{#if block.overlaps}}<span class="error-text">{{fa-icon 'warning'}}</span>{{/if}}
-                  {{format-duration (moment-diff block.from block.to) false}}
+                  {{#if block.overlaps}}
+                    <span class="error-text">{{fa-icon 'warning'}}</span>
+                  {{/if}}
+                  {{#if block.to}}
+                    {{format-duration (moment-diff block.from block.to) false}}
+                  {{/if}}
                 </td>
               </tr>
-            {{/if}}
+            {{/unless}}
           {{/each}}
           <tr>
             <td><button data-test-add-activity-block class="btn btn-default" {{action 'addBlock'}}>{{fa-icon 'plus'}}</button></td>
