--- a/app/components/sy-datepicker/template.hbs
+++ b/app/components/sy-datepicker/template.hbs
@@ -11,8 +11,8 @@
       value={{moment-format value 'DD.MM.YYYY' allow-empty=true}}
       placeholder={{placeholder}}
     >
-    <span class="clear">
-      {{fa-icon 'times' click=(action 'clear')}}
+    <span class="clear" {{action 'clear'}}>
+      {{fa-icon 'times'}}
     </span>
   {{/dd.trigger}}
 
