Add possibility to add a title for a checkbox

--- a/app/components/sy-checkbox/template.hbs
+++ b/app/components/sy-checkbox/template.hbs
@@ -1,2 +1,2 @@
 {{one-way-checkbox checked disabled=disabled update=(action on-change) elementId=(concat elementId '-checkbox')}}
-<label for="{{elementId}}-checkbox">{{#if hasBlock}}{{~yield~}}{{else}}{{~label~}}{{/if}}</label>
+<label for="{{elementId}}-checkbox" title={{title}}>{{#if hasBlock}}{{~yield~}}{{else}}{{~label~}}{{/if}}</label>
