Improved controlling functions
* URL filters for reschedule and analysis
* More filters
* Better UI for rescheduling
* New function to verify reports (rescheduling)

--- a/app/components/task-selection/template.hbs
+++ b/app/components/task-selection/template.hbs
@@ -31,7 +31,7 @@
   )
   task = (component 'aupac-typeahead'
     name               = 'task'
-    action             = (action (mut task))
+    action             = (action (queue (action (mut task)) (action on-set-task)))
     class              = 'form-control'
     disabled           = (or disabled (not project))
     placeholder        = 'Select task...'
