--- a/app/analysis/template.hbs
+++ b/app/analysis/template.hbs
@@ -1,52 +1,70 @@
 <h1>Project analysis</h1>
-{{#form-booking-filter page=page sort=sort as |data|}}
-  {{#paginated-table
-    pages=data.reports.lastSuccessful.value.meta.pagination.pages
-    page=page
-    data-test-search-results=''
-    }}
-    <thead>
-      <tr>
-        {{#sort-header update=(action (mut sort)) current=sort by='date'}}Date{{/sort-header}}
-        {{#sort-header update=(action (mut sort)) current=sort by='duration'}}Dur.{{/sort-header}}
-        {{#sort-header update=(action (mut sort)) current=sort by='task__project__customer__name'}}Customer{{/sort-header}}
-        {{#sort-header update=(action (mut sort)) current=sort by='task__project__name'}}Project{{/sort-header}}
-        {{#sort-header update=(action (mut sort)) current=sort by='task__name'}}Task{{/sort-header}}
-        {{#sort-header update=(action (mut sort)) current=sort by='user__username'}}User{{/sort-header}}
-        {{#sort-header update=(action (mut sort)) current=sort by='comment'}}Comment{{/sort-header}}
-      </tr>
-    </thead>
-  {{^}}
-    <tbody>
-      {{#each data.reports.lastSuccessful.value as |report|}}
-        <tr>
-          <td>{{moment-format report.date 'DD.MM.YYYY'}}</td>
-          <td>{{format-duration report.duration false}}</td>
-          <td>{{report.task.project.customer.name}}</td>
-          <td>{{report.task.project.name}}</td>
-          <td>{{report.task.name}}</td>
-          <td>{{report.user.username}}</td>
-          <td>{{report.comment}}</td>
-        </tr>
-      {{^}}
-        <tr>
-          <td colspan="7">{{if hasCriteria "I didn't find any results - try broadening your search!" "Please specify some search parameters."}}</td>
-        </tr>
-      {{/each}}
-    </tbody>
-  {{/paginated-table}}
 
-  {{#if data.reports.lastSuccessful}}
+{{report-filter
+  initial        = (hash
+    customer     = _customer
+    project      = _project
+    task         = _task
+    user         = _user
+    from         = _from
+    to           = _to
+  )
+  enabledFilters = (array 'customer' 'project' 'task' 'user' 'fromDate' 'toDate')
+  on-apply       = (action 'applyFilter')
+}}
+
+{{#paginated-table
+  data-test-filter-results
+  pages=model.meta.pagination.pages
+  page=page
+}}
+  <thead>
+    <tr>
+      {{#sort-header update=(action (mut ordering)) current=ordering by='user__username'}}User{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='date'}}Date{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='duration'}}Duration{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__customer__name'}}Customer{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
+      {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
+    </tr>
+  </thead>
+{{^}}
+  <tbody>
+    {{#each model as |report|}}
+      <tr>
+        <td>{{report.user.username}}</td>
+        <td>{{moment-format report.date 'DD.MM.YYYY'}}</td>
+        <td>{{format-duration report.duration false}}</td>
+        <td>{{report.task.project.customer.name}}</td>
+        <td>{{report.task.project.name}}</td>
+        <td>{{report.task.name}}</td>
+        <td>{{report.comment}}</td>
+      </tr>
+    {{^}}
+      <tr>
+        <td colspan="11" class="text-center">
+          {{#if (is-array model)}}
+            I didn't find any results - try broadening your filters!
+          {{else}}
+            Please specify some filter parameters.
+          {{/if}}
+        </td>
+      </tr>
+    {{/each}}
+  </tbody>
+{{/paginated-table}}
+
+{{#if model}}
   <p>
     {{#each exportLinks as |link index|}}
-      <button {{action 'download' link.url data.filters}}
-        disabled={{data.tooManyResults}}
+      <button {{action 'download' link.url}}
+        disabled={{gt model.length 4000}}
         class="btn btn-default"
         data-test-download-file={{index}}>{{link.label}}</button>
     {{/each}}
-    {{#if data.tooManyResults}}
+    {{#if (gt model.length 4000)}}
       More than 4000 rows were found. Please narrow down your search export results.
     {{/if}}
   </p>
-  {{/if}}
-{{/form-booking-filter}}
+{{/if}}
